...

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_main"
        android:layout_above="@+id/bottom_naviagation"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:animateLayoutChanges="true">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floating_action_button_main"
...
