...
                android:id="@+id/progress_bar_restaurants_loading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_restaurants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>

    <ScrollView
...
